--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,23 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-* {
-  box-sizing: border-box;
+@layer components {
+  .header-icon {
+    @apply bg-black rounded-full h-6 w-6 text-gray-500 p-1 ring-1 ring-gray-500 cursor-pointer;
+  }
+
+  .x-axis {
+    @apply flex justify-center;
+  }
+
+  .y-axis {
+    @apply border-b border-gray-100 flex items-end justify-end;
+  }
+
+  /* .side-bar-icon {
+    @apply h-6 w-6 text;
+  } */
 }
